[tool.poetry]
name = "cybellum"
version = "0.1.0"
description = "blog"
authors = ["volodymyr.boiko"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.4"
alembic = "1.12.1"
psycopg2 = "^2.9.9"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
black = "^23.9.1"
isort = "^5.12.0"
pylint = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
